2008-01-12  Jonathon Jongsma <jjongsma@gnome.org>

	* gtksourceview/src/gtksourceview_enums.defs:
	* gtksourceview/src/gtksourceview_signals.defs:
	* gtksourceview/src/gtksourceview_methods.defs: re-generated .defs file for
	new API in gtksourceview 2.1
	* tools/m4/convert_gtksourceviewmm.m4:
	* tools/extra_defs_gen/generate_defs_gtk.cc:
	* gtksourceview/src/sourcebuffer.hg:
	* gtksourceview/src/sourceview.hg:
	* gtksourceview/src/sourcelanguage.hg: wrapped some additional API in
	SourceView, SourceBuffer, and SourceLanguage

2007-12-09  Yselkowitz <yselkowitz@users.sourceforge.net>

	* docs/reference/Makefile.am (docdir):
	* tools/m4/Makefile.am (tools_m4_includedir):
	Install to 2.0-versioned directories.

1.9.3:

2007-09-27  Armin Burgmeier  <armin@openismus.com>

	* gtksourceview/gtksourceviewmm-2.0.pc.in: Depend on gtksourceview-2.0
	instead of gtksourceview-1.0.

1.9.2:

2007-09-18  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/gtksourceviewmm.h:
	* gtksourceview/src/Makefile_list_of_hg.am_fragment:
	* tools/extra_defs_gen/generate_defs_gtk.cc:
	* gtksourceview/src/sourcemarker.ccg:
	* gtksourceview/src/sourcemarker.hg: Removed SourceMarker, 
	because GtkSourceMarker was removed from the C API.
	* gtksourceview/src/sourcebuffer.ccg:
	* gtksourceview/src/sourcebuffer.hg: Removed create_marker(), 
	move_marker(), delete_marker(), get_marker(), 
	get_markers_in_region(), get_first_marker(), get_last_marker(), 
	get_iter_at_marker(), get_next_marker(), get_prev_marker(), 
	* gtksourceview/src/sourceview.hg: Remove set_marker_pixbuf(), 
	get_marker_pixbuf(), set_show_line_markers(), and 
	get_show_line_markers(), because the C functions were removed 
	from the C API.

	This fixes the build with the latest gtksourceview-2.0.

2007-09-13  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/sourcebuffer.hg:
	Renamed get/set_highlight() to get/set_highlight_syntax() 
	so that it is actually wrapped.

1.9.1:
